--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "locomotive-scroll": "^5.0.0-beta.11",
     "lokijs": "^1.5.12",
     "lucide-react": "^0.344.0",
+    "netlify": "^23.7.3",
     "razorpay": "^2.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
