--- a/netlify.toml
+++ b/netlify.toml
@@ -16,6 +16,12 @@
   force = true
 
 [[redirects]]
+  from = "/api/send-whatsapp"
+  to = "/.netlify/functions/send-whatsapp"
+  status = 200
+  force = true
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
